# hw5

./: dune-project
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/bfcab61e6a21ecf6d2f80029fc1ef484/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/src/: env.ml  env.pp.ml  errors.ml  errors.pp.ml  lex.ml  lex.pp.ml  newtests.ml  newtests.pp.ml  parse.pp.ml  parse_test.pp.ml  run.pp.ml  semantics.pp.ml  semantics_test.ml  semantics_test.pp.ml  stream.pp.ml  syntax.ml  syntax.pp.ml  trefoil.ml  trefoil3lib.cma  trefoil3lib.cmxa  trefoil3lib.cmxs  trefoil3lib.ml-gen  trefoiltest.cma  trefoiltest.cmxa  trefoiltest.cmxs  trefoiltest.ml-gen
_build/default/src/.merlin-conf/: exe-trefoil  lib-trefoil3lib  lib-trefoiltest
_build/default/src/.trefoil.eobjs/byte/: dune__exe__Trefoil.cmi  dune__exe__Trefoil.cmti
_build/default/src/.trefoil3lib.objs/: trefoil3lib__Env.impl.all-deps  trefoil3lib__Env.impl.d  trefoil3lib__Lex.impl.all-deps  trefoil3lib__Lex.impl.d  trefoil3lib__Parse.impl.all-deps  trefoil3lib__Parse.impl.d  trefoil3lib__Run.impl.all-deps  trefoil3lib__Run.impl.d  trefoil3lib__Semantics.impl.all-deps  trefoil3lib__Semantics.impl.d  trefoil3lib__Stream.impl.d  trefoil3lib__Syntax.impl.d
_build/default/src/.trefoiltest.inline-tests/: partitions-best
_build/default/src/.trefoiltest.objs/: trefoiltest__Newtests.impl.d  trefoiltest__Parse_test.impl.d  trefoiltest__Semantics_test.impl.d
src/: dune  hw6.trefoil  parse.ml  parse_test.ml  run.ml  semantics.ml  stream.ml
(+57 files in other folders)
